custom-elements: createElement() should not throw for unknown "is" value.

Reference:
https://github.com/w3c/webcomponents/issues/608

Bug: 807205
Change-Id: I3edeb9c9c7aa673ff3d9130c87d275c39ea9081e
Reviewed-on: https://chromium-review.googlesource.com/897313
Commit-Queue: Kent Tamura <tkent@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533660}
Former-commit-id: ae25beae260de5f2560003a65c46710eb296570f